Update plugin parent POM